--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
+    "logform": "^2.3.0",
     "triple-beam": "^1.3.0"
   },
   "peerDependencies": {
     "winston": "^3.x"
   },
   "devDependencies": {
+    "@types/logform": "^1.10.1",
     "@types/node": "^14.14.37",
     "@types/triple-beam": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "4.19.0",
